--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.x
-    - name: Install dependencies
+    - name: Install requirements.txt
       run: python3 -m pip install -r requirements.txt
     - name: Build binary with PyInstaller
       run: python3 -m PyInstaller --onefile --windowed main.py --name lancalc
