--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -20,13 +20,24 @@ jobs:
       with:
         python-version: 3.x
     - name: Install requirements.txt
-      run: python3 -m pip install -r requirements.txt
+      run: | 
+        python3 -m pip install -r requirements.txt
     - name: Build binary with PyInstaller
-      run: python3 -m PyInstaller --onefile --windowed main.py --name lancalc
-    - name: Upload Release Asset
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: ./dist/lancalc
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        python3 -m PyInstaller --onefile --windowed main.py --name lancalc
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: ${{ inputs.version }}
+          tag_name: ${{ inputs.version }}
+          body: |
+            ${{ inputs.version }}
+          draft: true
+          prerelease: false
+          files: |
+            ./dist/lancalc
