--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -10,7 +10,7 @@ on:
         required: true
         default: '0.1.0'
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
@@ -34,11 +34,60 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        name: ${{ inputs.version }}
-        tag_name: ${{ inputs.version }}
-        body: |
-          ${{ inputs.version }}
+        name: Linux Release ${{ github.event.inputs.version }}
+        tag_name: linux-${{ github.event.inputs.version }}
+        body: 'Linux Release ${{ github.event.inputs.version }}'
         draft: true
         prerelease: false
         files: |
           dist/lancalc
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - name: Install requirements
+        run: |
+          python -m pip install -r requirements.txt
+      - name: Build binary with PyInstaller
+        run: |
+          python -m PyInstaller --onefile --windowed main.py --name lancalc.exe
+      - name: Release Windows
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Windows Release ${{ github.event.inputs.version }}
+          tag_name: windows-${{ github.event.inputs.version }}
+          body: 'Windows Release ${{ github.event.inputs.version }}'
+          draft: true
+          prerelease: false
+          files: dist/lancalc.exe
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - name: Install requirements
+        run: |
+          python3 -m pip install -r requirements.txt
+      - name: Build binary with PyInstaller
+        run: |
+          python3 -m PyInstaller --onefile --windowed main.py --name lancalc
+      - name: Release macOS
+        uses: softprops/action-gh-release@v2
+        with:
+          name: macOS Release ${{ github.event.inputs.version }}
+          tag_name: macos-${{ github.event.inputs.version }}
+          body: 'macOS Release ${{ github.event.inputs.version }}'
+          draft: true
+          prerelease: false
+          files: dist/lancalc
