--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,6 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-latest
-    # outputs:
-    #  artifact: ${{ steps.build.outputs.artifact-path }}
     steps:
     - name: Check out code
       uses: actions/checkout@v2
@@ -34,19 +32,14 @@ jobs:
       run: |
         set -eux
         tree
-    #- name: Build artifact output
-    #  id: build
-    #  run: echo "artifact-linux=$(pwd)/dist/lancalc-linux" >> $GITHUB_ENV
     - name: Upload artifact for Linux
       uses: actions/upload-artifact@v2
       with:
-        name: lancalc-linux
+        name: linux
         path: dist/
 
   build-macos:
     runs-on: macos-latest
-    # outputs:
-    #  artifact: ${{ steps.build.outputs.artifact-path }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -64,19 +57,14 @@ jobs:
         run: |
           set -eux
           ls -lah dist
-      #- name: Build artifact output
-      #  id: build
-      #  run: echo "artifact-macos=$(pwd)/dist/lancalc-macos" >> $GITHUB_ENV
       - name: Upload artifact for MacOS
         uses: actions/upload-artifact@v2
         with:
-          name: lancalc-macos
+          name: macos
           path: dist/
 
   build-windows:
     runs-on: windows-latest
-    # outputs:
-    #  artifact: ${{ steps.build.outputs.artifact-path }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -90,13 +78,10 @@ jobs:
       - name: Build binary with PyInstaller
         run: |
           python -m PyInstaller --onefile --windowed main.py --name lancalc-windows.exe
-      #- name: Build artifact output
-      #  id: build
-      #  run: echo "artifact-windows=$(pwd)/dist/lancalc-windows.exe" >> $GITHUB_ENV
       - name: Upload artifact for Windows
         uses: actions/upload-artifact@v2
         with:
-          name: lancalc-windows
+          name: windows
           path: dist/
 
   release:
